# salati

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md
.github/workflows/: rust.yml
src/: cli.rs  constants.rs  lib.rs  prayer_times.rs
src/astronomy/: mod.rs  ops.rs  qiblah.rs  solar.rs  unit.rs
src/models/: adjustments.rs  high_latitude_rule.rs  madhab.rs  method.rs  mod.rs  parameters.rs  polar_circle_resolution.rs  prayer.rs  prayer_time.rs  twilight.rs
