[package]
name = "salati"
version = "0.0.0"
edition = "2021"
authors = ["Wael Ben Zid <benzid.wael@hotmail.fr>"]
description = "Rust library to compute prayer times"
rust-version = "1.62.1"
readme = "README.md"

[lib]
crate-type = ["cdylib", "lib"]
doctest = true
test = true
doc = true

[dependencies]
wasm-bindgen = "0.2.82"
chrono = "0.4.6"

[dev-dependencies]
wasm-bindgen-test = "0.3"
spectral = "0.6.0"
